k8s/kind/testconfigs/dnsutils.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnsutils
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dnsutils
  template:
    metadata:
      labels:
        app: dnsutils
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: dnsutils
          image: gcr.io/kubernetes-e2e-test-images/dnsutils:1.3
          command:
            - sleep
            - "3600"
          imagePullPolicy: IfNotPresent
